# phys-431

./: hello.py  pyproject.toml
continuous-NMR/: Continuous NMR Analysis (Template).ipynb  Physics_431_Continuous_NMR_Analysis (2).html  Physics_431_Continuous_NMR_Analysis (2).ipynb  Physics_431_Continuous_NMR_Analysis.ipynb  hello.py  pyproject.toml
continuous-NMR/data/: exercise1.csv
hall-effect/: Hall Effect Analysis (Template).ipynb  Phys431_Hall_Effect_Analysis_Final_Version.ipynb  report.md
hall-effect/data/: al_data.csv  au_data.csv  b_data.csv  inas_data.csv
mossbauer-spectroscopy/: mossbauer_analysis.html  mossbauer_analysis.ipynb  pyproject.toml
mossbauer-spectroscopy/data/: 0.00025 in  Fe.txt  Enriched_Fe_47.21mV.txt  Hematite 73.5mV.txt  Natural Fe 0.001 in.txt  Sodium Nitroprusside.txt  Stainless Fe-transducer unconnected.txt  Stainless Fe.txt
