[project]
name = "phys-431"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.5",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "rich>=14.0.0",
    "scipy>=1.16.0",
    "uncertainties>=3.2.3",
]
